# hack-tractor

./: .gitignore  README.md  enhanced_gui_app.py  gui_app.py  gui_app_new.py  gui_app_old.py  main.py  pyproject.toml  requirements.txt
.copilot/: README.md
.github/: README.md
.github/workflows/: main.yml.disabled
data/: README.md
docs/: project_plan.md  project_progress.md  test_plan.md  test_progress.md
notebooks/: equipment_data_analysis.ipynb
scripts/: README.md  install_vscode_extensions.sh  setup_dev_environment.sh  setup_jupyter.sh  setup_venv.sh
src/: README.md
src/ai/: README.md
src/ai/models/: base_model.py  predictive_maintenance.py
src/ai/vision/: README.md  image_processor.py
src/backend/: app.py
src/dashboard/: README.md
src/dashboard/frontend/: README.md
src/equipment/: README.md
src/equipment/interfaces/: README.md
src/equipment/interfaces/can/: can_interface.py  tractor_can_interface.py
src/equipment/interfaces/hardware/: README.md
src/equipment/interfaces/john_deere/: README.md  john_deere_client.py
src/equipment/interfaces/obd/: obd_interface.py  tractor_obd_interface.py
src/equipment/interfaces/proprietary/: README.md
src/hack_tractor/: __init__.py
src/hack_tractor/core/: __init__.py  config.py  constants.py  exceptions.py  utils.py
src/hack_tractor/equipment/interfaces/tractor_laptop/: __init__.py  laptop_interface.py
tests/: README.md
